--- a/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
+++ b/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
@@ -1,10 +1,8 @@
 - id: 0
-  skip: true
   fields:
     Front: |
-      SVEC-XX.XX-XX Synthesis Notes:
-      #### Summary of definitions:
-      #### Summary of theorems:
+      SVEC-XX.XX-XX Synthesis:
+      List the differential-equation definitions and theorems.
     Back: |
     Annotations: ''
   tags: []
@@ -18,8 +16,8 @@
   fields:
     Front: |
       SVEC-XX.XX-XX Synthesis:
-      #### Vector Calculus
-      ##### The Divergence Theorem
+      #### Applications of Integration
+      ##### Differential Equations
       Define . List its hypotheses.
     Back: |
       X
@@ -44,8 +42,8 @@
   fields:
     Front: |
       SVEC-XX.XX-XX Synthesis:
-      #### Vector Calculus
-      ##### The Divergence Theorem
+      #### Applications of Integration
+      ##### Differential Equations
       State the . List its hypotheses.
     Back: |
       X
