--- a/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/templates/Synthesis.yml
+++ b/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/templates/Synthesis.yml
@@ -22,7 +22,7 @@
     Front: |
       CET-XX.XX-XX Theory:
       #### Further Applications of Integration
-      ##### Applications to Physics and Engineering
+      ##### Area of a Surface of Revolution
       Define . List its hypotheses.
     Back: |
       X
@@ -45,7 +45,7 @@
     Front: |
       CET-XX.XX-XX Theory:
       #### Further Applications of Integration
-      ##### Applications to Physics and Engineering
+      ##### Area of a Surface of Revolution
       State the . List its hypotheses.
     Back: |
       X
