--- a/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
+++ b/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/templates/Synthesis.yml
@@ -18,6 +18,7 @@
       SVEC-XX.XX-XX Synthesis:
       #### Applications of Integration
       ##### Differential Equations
+      ###### Separable Equations
       Define . List its hypotheses.
     Back: |
       X
@@ -44,6 +45,7 @@
       SVEC-XX.XX-XX Synthesis:
       #### Applications of Integration
       ##### Differential Equations
+      ###### Separable Equations
       State the . List its hypotheses.
     Back: |
       X
